--- a/sfzl/admin/seller/openShop.html
+++ b/sfzl/admin/seller/openShop.html
@@ -49,9 +49,9 @@
 	<div class="adminNav">
 		<div class="w menuBox">
 			<ul class="fl">
-				<li class="on"><a href="javascript:;">管理首页</a></li>
-				<li><a href="javascript:;">基础设置</a></li>
-				<li><a href="javascript:;">规则中心</a></li>
+				<li class="on"><a href="openShop.html">管理首页</a></li>
+				<li><a href="setShop.html">基础设置</a></li>
+				<li><a href="rule.html">规则中心</a></li>
 				<li><a href="javascript:;">安全中心</a></li>
 				<li><a href="javascript:;">服务中心</a></li>
 			</ul>
