--- a/sfzl/admin/seller/rule.html
+++ b/sfzl/admin/seller/rule.html
@@ -50,8 +50,8 @@
 		<div class="w menuBox">
 			<ul class="fl">
 				<li><a href="openShop.html">管理首页</a></li>
-				<li class="on"><a href="setShop.html">基础设置</a></li>
-				<li><a href="rule.html">规则中心</a></li>
+				<li><a href="setShop.html">基础设置</a></li>
+				<li class="on"><a href="rule.html">规则中心</a></li>
 				<li><a href="javascript:;">安全中心</a></li>
 				<li><a href="javascript:;">服务中心</a></li>
 			</ul>
@@ -60,7 +60,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="adminBox account">
+	<div class="adminBox rule">
 		<div class="w">
 			<div class="l fl">
 				<ul class="menu">
@@ -104,87 +104,60 @@
 				<div class="nav">
 					<a href="javascript:;">我是卖家 ></a>
 					<a href="javascript:;">基础设置 ></a>
-					<a href="javascript:;">店铺基本设置</a>
+					<a href="javascript:;">规则中心</a>
 				</div>
-				<div class="tabBox">
-					<a href="javascript:;">店铺基本设置</a>
-					<a href="javascript:;">平台认证</a>
-					<a href="javascript:;">经营许可证</a>
-					<a href="javascript:;" class="on">账号管理</a>
-				</div>
-				<div class="accountTab">
-					<a href="javascript:;" class="on">安全设置</a>
-					<a href="javascript:;">个人资料</a>
-					<a href="javascript:;">隐私设置</a>
-					<a href="javascript:;">银行卡绑定设置</a>
-					<a href="javascript:;">个人交易信息</a>
-					<a href="javascript:;">收货地址</a>
-					<a href="javascript:;">公司信息维护</a>
-				</div>
-				<div class="accountInfo">
-					<div class="basic">
-						<h3 class="ti">您的基础信息</h3>
-						<div class="li userId">
-							<span class="s1">会员名：ASD54564</span>
-						</div>
-						<div class="li mail">
-							<span class="s1">登录邮箱：您尚未设置登录邮箱</span>
-							<a href="javascript:;" class="addMailBtn">添加邮箱</a>
-						</div>
-						<div class="li mobile">
-							<span class="s1">绑定手机：136****5555</span>
-							<a href="javascript:;" class="changeMobileBtn">修改手机</a>
-						</div>
+				<div class="ruleBox">
+					<h3 class="ti">平台规则</h3>
+					<div class="date">2015-12-30</div>
+					<h4 class="ti">第一章 概述</h4>
+					<div class="item">
+						<label>第一条</label><p>为促进开放、透明、分享、责任的新商业文明，保障用户合法权益，维护淘宝正常经营秩序，根据《丝纺之路服务协议》，制定本规则。</p>
 					</div>
-					<div class="safe">
-						<h3 class="ti">您的安全服务</h3>
-						<div class="level">
-							<span class="ti">安全等级：</span>
-							<div class="levelProgress">
-								<div class="progress s7"></div>
-							</div>
-							<i class="icon tip"></i>
-							<span class="text">完成 <a href="javascript:;" class="passBtn">密保设置</a>，提升账户安全。</span>
-						</div>
-						<div class="item on">
-							<div class="status">
-								<i class="icon"></i>
-								<span class="text">已完成</span>
-							</div>
-							<span class="s1">身份认证</span>
-							<p class="p1">用于提升账号的安全性和信任级别。认证后的有卖家记录的账号不能修改认证信息。</p>
-							<a href="javascript:;" class="btn">查看</a>
-						</div>
-						<div class="item on">
-							<div class="status">
-								<i class="icon"></i>
-								<span class="text">已设置</span>
-							</div>
-							<span class="s1">登录密码</span>
-							<p class="p1">安全性高的密码可以使账号更安全。建议您定期更换密码，且设置一个包含数字和字母，并长度超过6位以上的密码。</p>
-							<a href="javascript:;" class="btn">修改</a>
-						</div>
-                        <div class="item">
-							<div class="status">
-								<i class="icon"></i>
-								<span class="text">已完成</span>
-							</div>
-							<span class="s1">密保问题</span>
-							<p class="p1">密保问题是您找回登录密码的方式之一。建议您设置一个容易记住，且最不容易被他人获取的问题及答案，更有效保障您的密码安全。</p>
-							<a href="javascript:;" class="btn">设置</a>
-						</div>
-						<div class="item on">
-							<div class="status">
-								<i class="icon"></i>
-								<span class="text">已完成</span>
-							</div>
-							<span class="s1">绑定手机</span>
-							<p class="p1"> 绑定手机后，您即可享受淘宝丰富的手机服务，如手机找回密码等。</p>
-							<a href="javascript:;" class="btn">修改</a>
-						</div>
-
+					<div class="item">
+						<label>第二条</label><p>淘宝规则，是对淘宝用户增加基本义务或限制基本权利的条款。</p>
+					</div>
+					<div class="item">
+						<label>第三条</label><p>规行为的认定与处理，应基于淘宝认定的事实并严格依规执行。部分违规行为，淘宝网亦将引入大众评审员机制进行认定，淘宝网会基于大众评审员认定的事实严格依规执行。淘宝用户在适用规则上一律平等。</p>
+					</div>
+					<div class="item">
+						<label>第四条</label><p>用户应遵守国家法律、行政法规、部门规章及相关规范性文件的规定。对任何涉嫌违反国家法律、行政法规、部门规章及相关规范性文件的规定的行为，本规则已有规定的，理不免除其应尽的法律义务及应承担的法律责任。用户在淘宝的任何行为，应同时遵守与淘宝及其关联公司所签订的各项协议。</p>
+					</div>
+					<h4 class="ti">第二章 定义</h4>
+					<div class="item">
+						<label>第五条</label><p>丝纺之路，域名为 sifang.com</p>
+					</div>
+					<div class="item">
+						<label>第六条</label><p>用户，指具有完全民事行为能力的淘宝各项服务的使用者。</p>
+					</div>
+					<div class="item">
+						<label>第七条</label><p>会员，指与丝纺之路签订《淘宝平台服务协议》和《天猫服务协议》并完成注册流程的用户。一个会员可以拥有多个账户，每个账户对应唯一的会员名。</p> 
+					</div>
+					<div class="item">
+						<label>第八条</label><p>买家，指在丝纺之路上浏览或购买商品的用户。</p>
+					</div>
+					<div class="item">
+						<label>第九条</label><p>卖家，指在丝纺之路上发布商品的会员。</p>
+					</div>
+					<div class="item">
+						<label>第十条</label><p>拍下，指买家在丝纺之路上点击并确认购买的行为。</p>
+					</div>
+					<div class="item">
+						<label>第十一条</label><p>订单，指买家向单一卖家同一时间拍下单款或多款商品的合约。订单中针对任一款商品的内容构成独立的交易。</p>
+					</div>
+					<div class="item">
+						<label>第十二条</label><p>绑定，指丝纺之路账户与支付方式一一对应。</p>
+					</div>
+					<div class="item">
+						<label>第十三条</label><p>商品发布数量，指卖家在丝纺之路上在线出售中的商品款数总和。</p>
+					</div>
+					<div class="item">
+						<label>第十四条</label><p>退货运费险,指保险公司为投保该险种的淘宝会员支付单次退货运费。</p>
+					</div>
+					<div class="item">
+						<label>第十五条</label><p>分销商品，指供销平台分销商从其供应商获取并出售的商品。</p> 
 					</div>
 				</div>
+				
 			</div>
 		</div>
 	</div>
@@ -197,12 +170,7 @@
     <script type="text/javascript" src="../../public/common/js/modernizr-1.7.min.js"></script>
     <script type="text/javascript" src="../../public/common/js/admin.js"></script>
 	<script type="text/javascript">
-		$('.accountTab a').click(function(){
-			var $this = $(this);
-			$('.accountTab a').removeClass('on');
-			$this.addClass('on');
 
-		});
 	</script>
 
 </body>
