--- a/sfzl/admin/seller/rule.html
+++ b/sfzl/admin/seller/rule.html
@@ -64,7 +64,7 @@
 		<div class="w">
 			<div class="l fl">
 				<ul class="menu">
-					<li class="li">
+					<li class="li on">
 						<a href="javascript:;" class="a">交易管理<i class="icon"></i></a>
 						<ul class="subMenu">
 							<li><a href="sold.html" class="on">已卖出的商品</a></li>
@@ -72,7 +72,7 @@
 							<li><a href="ship.html">发货</a></li>
 						</ul>
 					</li>
-					<li class="li">
+					<li class="li on">
 						<a href="javascript:;" class="a">商品管理<i class="icon"></i></a>
 						<ul class="subMenu">
 							<li><a href="release.html">发布商品</a></li>
@@ -80,7 +80,7 @@
 							<li><a href="window.html">橱窗管理</a></li>
 						</ul>
 					</li>
-					<li class="li">
+					<li class="li on">
 						<a href="javascript:;" class="a">店铺管理<i class="icon"></i></a>
 						<ul class="subMenu">
 							<li><a href="view.html">查看店铺</a></li>
@@ -89,7 +89,7 @@
 							<li><a href="mobile.html">手机店铺</a></li>
 						</ul>
 					</li>
-					<li class="li">
+					<li class="li on">
 						<a href="javascript:;" class="a">客户服务<i class="icon"></i></a>
 						<ul class="subMenu">
 							<li><a href="cps.html">消费者保障服务</a></li>
