--- a/sfzl/admin/seller/sog.html
+++ b/sfzl/admin/seller/sog.html
@@ -60,14 +60,14 @@
 			</div>
 		</div>
 	</div>
-	<div class="adminBox sold">
+	<div class="adminBox sold sog">
 		<div class="w">
 			<div class="l fl">
 				<ul class="menu">
 					<li class="li on">
 						<a href="javascript:;" class="a">交易管理<i class="icon"></i></a>
 						<ul class="subMenu">
-							<li><a href="sold.html" class="on">已卖出的商品</a></li>
+							<li><a href="sold.html">已卖出的商品</a></li>
 							<li><a href="review.html">评价管理</a></li>
 							<li><a href="ship.html">发货</a></li>
 						</ul>
@@ -76,7 +76,7 @@
 						<a href="javascript:;" class="a">商品管理<i class="icon"></i></a>
 						<ul class="subMenu">
 							<li><a href="release.html">发布商品</a></li>
-							<li><a href="sog.html">出售中的商品</a></li>
+							<li><a href="sog.html" class="on">出售中的商品</a></li>
 							<li><a href="window.html">橱窗管理</a></li>
 						</ul>
 					</li>
