--- a/sfzl/admin/login/login.html
+++ b/sfzl/admin/login/login.html
@@ -31,6 +31,10 @@
 				<h3>丝纺账号登陆</h3>
 				<input type="text" class="username" placeholder="手机号/会员名/邮箱">
 				<input type="password" class="password" placeholder="请输入密码">
+				<div class="row">
+					<input type="text" name="imgCheck" class="halfTxt" placeholder="图片验证码" />
+					<img src="../../public/common/img/imgCheck.jpg" class="imgCheck">
+				</div>
 				<div class="forget">
 					<a href="javascript:;" class="forgetBtn">忘记登录密码？</a>
 					<a href="javascript:;" class="registBtn">免费注册</a>
