--- a/sfzl/admin/seller/rule.html
+++ b/sfzl/admin/seller/rule.html
@@ -164,6 +164,38 @@
 
     <!--foot start-->
     <div class="foot">
+    	<div class="w">
+    		<div class="fMenu">
+    			<a href="javascript:;">帮助中心</a>   
+    			<span class="line">|</span>   
+    			<a href="javascript:;">购买流程</a>   
+    			<span class="line">|</span>   
+    			<a href="javascript:;">自助服务</a>   
+    			<span class="line">|</span>   
+    			<a href="javascript:;">平台新闻</a>   
+    			<span class="line">|</span>   
+    			<a href="javascript:;">行业动态</a>   
+    			<span class="line">|</span>   
+    			<a href="javascript:;">配送方式</a>   
+    			<span class="line">|</span>   
+    			<a href="javascript:;">我要买花</a>   
+    			<span class="line">|</span>   
+    			<a href="javascript:;">DIY定制</a>   
+    			<span class="line">|</span>   
+    			<a href="javascript:;">半成品丝绸</a>   
+    			<span class="line">|</span>   
+    			<a href="javascript:;">联系我们</a>   
+    			<span class="line">|</span>   
+    			<a href="javascript:;">关于丝纺栏</a>
+    		</div>
+			<div class="copyrightBox">
+				COPYRIGHT © 2015 深圳同益新中控实业有限公司 ALL RIGHTS RESERVED 技术支持：富润电商PHONE:0755-22969785
+			</div>
+			<div class="fcompanyList">
+				<a href="http://www.tong1sun.com" target="_blank"><img src="../../public/common/img/flogo.png"></a>
+				<a href="http://www.baidu.com" target="_blank"><img src="../../public/common/img/baidu.png"></a>
+			</div>
+    	</div>
     </div>
     <!--foot end-->
     <script type="text/javascript" src="../../public/common/js/jquery-1.8.3.min.js"></script>
